# roctop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build_whl_and_publish.yaml
skills/release-version/: SKILL.md
skills/release-version/agents/: openai.yaml
skills/roctop-demo-svg/: SKILL.md
skills/roctop-demo-svg/agents/: openai.yaml
skills/roctop-demo-svg/scripts/: generate_demo_svg.py
src/roctop/: __init__.py  cli.py  collectors.py  debug_counters.py  formatting.py  history.py  interaction.py  models.py  profiling.py  render.py
tests/: test_cli.py  test_collectors.py  test_debug_counters.py  test_history.py  test_interaction.py  test_profiling.py  test_render.py
