[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roctop"
version = "0.3.1"
description = "A lightweight Rich terminal monitor for AMD ROCm GPUs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
]
authors = [
    {name = "Vu Nguyen"},
]

[project.scripts]
roctop = "roctop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
