[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "roctop"
version = "1.0.0"
description = "A lightweight Rich terminal monitor for AMD ROCm GPUs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "rich>=13",
]
authors = [
    {name = "Vu Nguyen"},
]

[project.urls]
Homepage = "https://github.com/nrhevu/roctop"
Repository = "https://github.com/nrhevu/roctop"
Issues = "https://github.com/nrhevu/roctop/issues"

[project.scripts]
roctop = "roctop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
